@@ -92,13 +92,7 @@ This Work includes contributions authored by David E. Jones, not as a
                     <field name="submitButton"><default-field title="Create"><submit/></default-field></field>
 
                     <field-layout collapsible="true">
-                        <field-ref name="exampleId"/>
-                        <field-ref name="exampleTypeEnumId"/>
-                        <field-ref name="statusId"/>
-                        <field-ref name="exampleName"/>
-                        <field-ref name="description"/>
-                        <field-ref name="longDescription"/>
-                        <field-ref name="comments"/>
+                        <fields-not-referenced/>
                         <field-row>
                             <field-ref name="exampleSize"/>
                             <field-ref name="exampleDate"/>
